--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,700;1,900&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="/css/reset.css">
-	<link rel="stylesheet" href="/css/main.css?v=0.39">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/main.css?v=0.39">
 </head>
 <body>
 	<header class="header">
@@ -1109,6 +1109,6 @@
 		</div>
 	</footer>
 
-	<script src="/js/main.js?v=0.39"></script>
+	<script src="js/main.js?v=0.39"></script>
 </body>
 </html>
