Fix path to images

--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
 
 			<div class="header__with-support with-support">
 				<span class="with-support__logo">
-					<img src="/images/pnu.png" alt="">
+					<img src="images/pnu.png" alt="">
 				</span>
 				<span class="with-support__logo">
-					<img src="/images/knis.png" alt="">
+					<img src="images/knis.png" alt="">
 				</span>
 				<span class="with-support__logo">
-					<img src="/images/EPAM.png" alt="">
+					<img src="images/EPAM.png" alt="">
 				</span>
 			</div>
 
 			<div class="header__screens main-screens">
 				<div class="main-screens__left"></div>
 				<div class="main-screens__center">
-					<img class="main-screens__monitor" src="/images/Studio-Display.png" alt="">
-					<img class="main-screens__monitor-img" src="/images/AdminPublications_uk.png" alt="">
+					<img class="main-screens__monitor" src="images/Studio-Display.png" alt="">
+					<img class="main-screens__monitor-img" src="images/AdminPublications_uk.png" alt="">
 				</div>
 				<div class="main-screens__right">
 					<div class="main-screens__laptop-container">
 						<div>
-							<img class="main-screens__laptop" src="/images/MBA-13.png" alt="">
-							<img class="main-screens__laptop-img" src="/images/CatalogGuest_uk.png" alt="">
+							<img class="main-screens__laptop" src="images/MBA-13.png" alt="">
+							<img class="main-screens__laptop-img" src="images/CatalogGuest_uk.png" alt="">
 						</div>
 					</div>
 				</div>
@@ -80,7 +80,7 @@
 				<div class="cards__item card card-bg--calendar">
 					<strong class="card__title font-700">Термін проходження</strong>
 					<span class="card__icon">
-						<img src="/images/calendar-icon.svg" alt="">
+						<img src="images/calendar-icon.svg" alt="">
 					</span>
 					<span class="card__link"></span>
 					<div class="card__content">
@@ -111,7 +111,7 @@
 								<h4 class="modal__content-title font-900">ТОВ «ЕПАМ СИСТЕМЗ»</h4>
 								
 								<div class="modal__content-img">
-									<img src="/images/EPAM.png" alt="">
+									<img src="images/EPAM.png" alt="">
 								</div>
 
 								<div class="modal__content-section">
@@ -173,7 +173,7 @@
 							</div>
 							<div class="modal__content">
 								<div class="modal__content-img">
-									<img src="/images/freelancer.jpg" alt="">
+									<img src="images/freelancer.jpg" alt="">
 								</div>
 
 								<h4 class="modal__content-title font-900">Онлайн</h4>
@@ -404,7 +404,7 @@
 
 		<div class="section__full-img full-img">
 			<figure>
-				<img src="/images/ASmartCookie-UseCaseDiagram.png" alt="">
+				<img src="images/ASmartCookie-UseCaseDiagram.png" alt="">
 				<figcaption class="font-i300">Діаграма прецедентів веб-системи</figcaption>
 			</figure>
 		</div>
@@ -734,7 +734,7 @@
 					</div>
 					<div class="program__img">
 						<figure>
-							<img src="/images/SignUp_uk.png" alt="">
+							<img src="images/SignUp_uk.png" alt="">
 						</figure>
 					</div>
 				</div>
@@ -745,7 +745,7 @@
 					</div>
 					<div class="program__img">
 						<figure>
-							<img src="/images/SignIn_uk.png" alt="">
+							<img src="images/SignIn_uk.png" alt="">
 						</figure>
 					</div>
 				</div>
@@ -756,7 +756,7 @@
 					</div>
 					<div class="program__img">
 						<figure>
-							<img src="/images/CatalogGuest_uk.png" alt="">
+							<img src="images/CatalogGuest_uk.png" alt="">
 						</figure>
 					</div>
 				</div>
@@ -767,7 +767,7 @@
 					</div>
 					<div class="program__img">
 						<figure>
-							<img src="/images/AddFunds_uk.png" alt="">
+							<img src="images/AddFunds_uk.png" alt="">
 						</figure>
 					</div>
 				</div>
@@ -778,7 +778,7 @@
 					</div>
 					<div class="program__img">
 						<figure>
-							<img src="/images/UserAcc_uk.png" alt="">
+							<img src="images/UserAcc_uk.png" alt="">
 						</figure>
 					</div>
 				</div>
@@ -790,7 +790,7 @@
 					</div>
 					<div class="program__img">
 						<figure>
-							<img src="/images/CreatePublication_uk.png" alt="">
+							<img src="images/CreatePublication_uk.png" alt="">
 						</figure>
 					</div>
 				</div>
@@ -801,7 +801,7 @@
 					</div>
 					<div class="program__img">
 						<figure>
-							<img src="/images/AdminPublications_uk.png" alt="">
+							<img src="images/AdminPublications_uk.png" alt="">
 						</figure>
 					</div>
 				</div>
@@ -814,7 +814,7 @@
 					</div>
 					<div class="program__img">
 						<figure>
-							<img src="/images/AdminUsers_uk.png" alt="">
+							<img src="images/AdminUsers_uk.png" alt="">
 						</figure>
 					</div>
 				</div>
@@ -825,7 +825,7 @@
 					</div>
 					<div class="program__img">
 						<figure>
-							<img src="/images/Search_uk.png" alt="">
+							<img src="images/Search_uk.png" alt="">
 						</figure>
 					</div>
 				</div>
@@ -840,7 +840,7 @@
 
 		<div class="section__full-img full-img">
 			<figure>
-				<img src="/images/ASmartCookieDB.drawio.png" alt="">
+				<img src="images/ASmartCookieDB.drawio.png" alt="">
 			</figure>
 		</div>
 	</section>
@@ -971,7 +971,7 @@
 					<p class="font-900">(72 успішно пройдених тести)</p>
 				</div>
 				<div class="test__img">
-					<img src="/images/test.png" alt="">
+					<img src="images/test.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -1084,7 +1084,7 @@
 
 			<div class="footer__data">
 				<div class="footer__img">
-					<img src="/images/me.jpg" alt="">
+					<img src="images/me.jpg" alt="">
 				</div>
 				<div class="footer__info">
 					<h3 class="footer__title font-900">Павлюк Михайло</h3>
