--- a/index.html
+++ b/index.html
@@ -1034,12 +1034,12 @@
 				</div>
 
 				<div class="cards__item card card-bg--finish">
-					<strong class="card__title font-700">Висновки та пропозиції</strong>
+					<strong class="card__title font-700">Висновки</strong>
 					<span class="card__link"></span>
 					<div class="card__content">
 						<div class="modal">
 							<div class="modal__header">
-								<h3 class="modal__title font-900">Висновки та пропозиції</h3>
+								<h3 class="modal__title font-900">Висновки</h3>
 								<span class="modal__close"></span>
 							</div>
 							<div class="modal__content">
